--- a/src/components/select/Select.module.css
+++ b/src/components/select/Select.module.css
@@ -1,3 +1,12 @@
-.select {
+.select span.main {
+    display: inline-block;
+    border: 1px solid #000;
+    min-height: 20px;
+    min-width: 40px;
+}
 
+.items {
+    position: absolute;
+    padding: 5px;
+    border: 1px solid #000;
 }
