--- a/src/components/select/Select.module.css
+++ b/src/components/select/Select.module.css
@@ -1,6 +1,15 @@
-.select span.main {
+/*.select span.main {
     display: inline-block;
     border: 1px solid #000;
+    min-height: 20px;
+    min-width: 40px;
+}*/
+
+.select span.main {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #000;
+    padding: 5px;
     min-height: 20px;
     min-width: 40px;
 }
